criacao da tela home, correcao de menu!
reparos em login e web service!

--- a/www/index.html
+++ b/www/index.html
@@ -288,8 +288,8 @@
                   <input type="password" maxlength="13" class="input_novo2_"  style="width:100%;" id="campo-login-senha" value="123456" placeholder="Sua Senha">
                 </div>
 
-                    <!--<div class="offClick btn_padrao" onclick="fazLogin();" style="margin-top:10px;">-->
-                  <div class="offClick btn_padrao" onclick="loginCriado();" style="margin-top:10px;">
+                    <div class="offClick btn_padrao" onclick="fazLogin();" style="margin-top:10px;">
+
                   <a href="javascript:void(0);" class="bt-destaqueEntrada">
                     <i class=""></i>
                     Entrar
@@ -335,12 +335,12 @@
 
                   <div class="col_meio_center place_">
                     <span class="titulo_input_">E-MAIL</span><br>
-                    <input type="text" maxlength="60" class="input_novo2_" id="email_cadastro"  onfocus="onfocusInput(23);" onblur="DesonfocusInput(69);"  placeholder="Digite o E-mail">
+                    <input type="text" maxlength="60" class="input_novo2_" style="width:100%;" id="email_cadastro"  onfocus="onfocusInput(23);" onblur="DesonfocusInput(69);"  placeholder="Digite o E-mail">
                   </div>
 
                   <div class="col_meio_center place_">
                     <span class="titulo_input_">CELULAR</span><br>
-                    <input type="tel" maxlength="13" class="input_novo2_" id="celular_cadastro" placeholder="00-0000-00000">
+                    <input type="tel" maxlength="13" class="input_novo2_" onfocus="onfocusInput(23);" onblur="DesonfocusInput(69);" id="celular_cadastro" placeholder="00-0000-00000">
                   </div>
 
 
