novas telas, contato, cadastro com big data, correçoes
cadastro com busca em big data,

--- a/www/index.html
+++ b/www/index.html
@@ -90,9 +90,9 @@
 
 
       <script>
-      navigator.splashscreen.hide();
+
       function checkConnection() {
-      var networkState = navigator.connection.type;
+      /*var networkState = navigator.connection.type;
       var states = {};
       states[Connection.UNKNOWN]  = 'Unknown connection';
       states[Connection.ETHERNET] = 'Ethernet connection';
@@ -106,7 +106,7 @@
       //alert(states[networkState]);
       if(states[networkState]=='No network connection'){
         abreSemConexao();
-      }
+      }*/
       }
 
 
